Add a mechanism that allows to collect test cases from files and do stuff with it testing them, now we are a step closer to have a working base to the lib

--- a/spectrum/pyproject.toml
+++ b/spectrum/pyproject.toml
@@ -7,8 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+toml = "^0.10.2"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+spectrum = "spectrum.core:main"
