--- a/spectrum/tests/example_test/config.toml
+++ b/spectrum/tests/example_test/config.toml
@@ -1,13 +1,17 @@
+
+# This will be the events checked for the host 
 ["Host"]
 init = 0
 events=["event1", "event2", "event3"]
 in-except = "Resume" # Resume or Reload
 
+# This will be the events checked for the client
 ["Client1"]
 init = 1
 events=["event1", "event2", "event3"]
 in-except = "Resume" # Resume or Reload
 
+# This is the overal configs of the test group
 ["Configs"]
 debug-modes = ["DEBUG", "INFO", "WARNING", "EXCEPT"]
 test-modes = ["DEBUG"] # Can be "<MODE>", ["<MODE1>", <"MODE2">, ...], "All"
