--- a/spectrum/pyproject.toml
+++ b/spectrum/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 toml = "^0.10.2"
+pandas = "^2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
