--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,17 @@
 [tool.poetry]
-name = "spectrum"
+name = "testrium"
 version = "0.1.0"
-description = ""
+description = "A modern, advanced testing framework."
 authors = ["Cristian Camargo <ccf@cdone.com.br>"]
 readme = "README.md"
+homepage = "https://github.com/letalboy/testrium"
+repository = "https://github.com/letalboy/testrium"
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
 toml = "^0.10.2"
 pandas = "^2.2.2"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
@@ -19,4 +21,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-spectrum = "spectrum.core:main"
+testrium = "testrium.core:main"
+
+[tool.poetry.urls]
+Documentation = "https://github.com/letalboy/testrium#readme"
