--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "testrium"
+name = "misny"
 version = "0.1.0"
-description = "A modern, advanced testing framework."
+description = "A modern, advanced testing framework for probing and validating complex systems."
 authors = ["Cristian Camargo <ccf@cdone.com.br>"]
 readme = "README.md"
-homepage = "https://github.com/letalboy/testrium"
-repository = "https://github.com/letalboy/testrium"
+homepage = "https://github.com/letalboy/misny"
+repository = "https://github.com/letalboy/misny"
 license = "MIT"
 
 [tool.poetry.dependencies]
@@ -21,7 +21,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-testrium = "testrium.core:main"
+misny = "misny.core:main"
 
 [tool.poetry.urls]
-Documentation = "https://github.com/letalboy/testrium#readme"
+Documentation = "https://github.com/letalboy/misny#readme"
