--- a/tests/example_test/config.toml
+++ b/tests/example_test/config.toml
@@ -1,19 +1,6 @@
-
-# This will be the events checked for the host 
-["Host"]
-init = 0
-events = ["event1", "event2", "event3"]
-in-except = "Resume"                    # Resume or Reload
-
-# This will be the events checked for the client
-["Client1"]
-init = 1
-events = ["event1", "event2", "event3"]
-in-except = "Resume"                    # Resume or Reload
-
 # This is the overal configs of the test group
 ["Configs"]
-units = ["Host", "Client1"]
+units = ["_host", "client"]
 debug-modes = ["DEBUG", "INFO", "WARNING", "EXCEPT"]
 test-modes = ["DEBUG"]                               # Can be "<MODE>", ["<MODE1>", <"MODE2">, ...], "All"
 use-ai = false
@@ -24,4 +11,3 @@ repeat = 0                                           # can be any between 0 - 10
 analitics = true
 save-analitics = true
 save-performance = true
-
